2010-12-01 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-assistant-export.c
	(assist_runtime_init_target_folder, on_folder_selection_changed):
	Set/get current folder URI. Fix #616532.

	* src/nact/nact-ifolders-tab.c (on_browse_folder_clicked):
	Set/get current folder. Fix #616532.

	* src/api/na-object-item.h: Define new ITEM_TARGET_ANY target.

	* src/core/na-icontext.c (is_candidate_for_target):
	Unconditionnally accepts any target.

	* src/utils/nautilus-actions-run.c (main, get_profile_for_targets):
	Ask there is no selection on the target. Fix #634056.

	* configure.ac: call new NA_SET_DEFAULT_IO_PROVIDER macro.

	* m4/na-default-io-provider.m4: New file.

	* src/core/na-io-provider.c (na_io_provider_get_providers_list):
	Used the configured default I/O provider when no preference has been
	yet registered.

	* configure.ac:
	- Pre-release bump version number.
	- Define NAUTILUS_ACTIONS_DEBUG variable.

	* src/nact/nact-main.c (log_handler),
	* src/plugin-menu/nautilus-module.c (log_handler),
	* src/plugin-tracker/na-tracker-plugin.c (log_handler),
	* src/utils/console-utils.c (log_handler):
	Display debug informations when NAUTILUS_ACTIONS_DEBUG variable is set.

	* doc/nact/Makefile.am:
	Distribute admon-* icons with html docs	(workaround for #636175).

2010-11-30 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am: Only rebuild manuals when needed.

	* src/plugin-menu/nautilus-actions.c (create_menu_item):
	Set a unique name per target menu so that icons are displayed even
	when both toolbar and location context menu are targeted.

2010-11-25 Pierre Wieser <pwieser@trychlos.org>

	Add %o/%O no-op parameters.

	* doc/nact/C/figures/nact-legend.png: Update legend screenshot.
	* doc/nact/C/nact-execution.xml: Update parameters description.

	* src/core/na-object-profile-factory.c:
	* src/core/na-tokens.h: Update comments.

	* src/core/na-tokens.c
	(is_singular_exec, parse_singular): Update with new parameters.
